Update and rename PressKit5.5.html to index.html

--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@
 		
         <div class="section">
             <h2>Download Assets</h2>
-            <a href="press-assets.zip" class="btn">Download Press Kit</a><!--&nbsp; <a href="press-assets.zip" class="btn">Download Press Kit</a>--><div class="button-container">&nbsp; 
+            <a href="press-assets.zip" class="btn">Press Kit Repository</a><!--&nbsp; <a href="press-assets.zip" class="btn">Download Press Kit</a>--><div class="button-container">&nbsp; 
     <div class="btn" onclick="showPopup()">
         <div class="windows-logo">
             <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/Windows_logo_-_2021.svg" alt="Windows Logo" style="display: float; width: 40px; height: 40px; justify-content: flex-start; display: flex;">
